--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
 
     - name: Install dependencies
       run: npm ci
+      working-directory: .
 
     - name: Build
       run: npm run build
