--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,9 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
-    
+  
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -21,17 +21,29 @@ jobs:
         cache: 'npm'
         cache-dependency-path: paws_and_preferences/package.json
 
+    - name: Setup Pages
+      uses: actions/configure-pages@v4
+
     - name: Install dependencies
       run: npm ci
       working-directory: paws_and_preferences 
 
     - name: Build
       run: npm run build
-      working-directory: paws_and_preferences 
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      if: github.ref == 'refs/heads/main'
+    - name: Upload artifact
+      uses: actions/upload-pages-artifact@v2
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./out
+        path: ./out
+
+    deploy:
+      environment:
+        name: github-pages
+        url: ${{ steps.deployment.outputs.page_url }}
+      runs-on: ubuntu-latest
+      needs: build
+      steps:
+        - name: Deploy to GitHub Pages
+          id: deployment
+          uses: actions/deploy-pages@v3
+
