--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,9 +7,9 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
-  
+    
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -21,29 +21,17 @@ jobs:
         cache: 'npm'
         cache-dependency-path: paws_and_preferences/package.json
 
-    - name: Setup Pages
-      uses: actions/configure-pages@v4
-
     - name: Install dependencies
       run: npm ci
       working-directory: paws_and_preferences 
 
     - name: Build
       run: npm run build
+      working-directory: paws_and_preferences 
 
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v2
+    - name: Deploy to GitHub Pages
+      uses: peaceiris/actions-gh-pages@v3
+      if: github.ref == 'refs/heads/main'
       with:
-        path: ./out
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v3
-
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./out
