--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
     - name: Export static site
       run: npm run export
-      working-directory: paws_and_preferences
+      working-directory: paws_and_preferences/
 
     - name: List out directory
       run: ls -l paws_and_preferences/out || echo "out directory does not exist"
